--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseurl = "https://example.org/"
+baseurl = "https://ksblog.netlify.com/"
 languageCode = "en-us"
-title = "John Doe's blog"
+title = "Kori's Data Science Blog"
 # Define how many pages appear per site
-paginate = 10
+paginate = 2
 # Enable comments powered by Disqus by entering your disqus shortname
-disqusShortname = "spf13"
+disqusShortname = ""
 # Enable gogle analytics by entering your tracking code
 googleAnalytics = ""
 theme = "hugo-minimalist-theme"
@@ -13,13 +13,13 @@ theme = "hugo-minimalist-theme"
 # with the hugo server command
 
 [params]
-    site_author = "John Doe"
-    site_description = "The awesome blog of John Doe."
-    location = "Earth"
+    site_author = "Kori Sidwell"
+    site_description = "Student // Athlete"
+    location = "Erie, PA"
     # Link custom assets relative to /static
     avatar = "img/profile-image.png"
     header_background = "img/desk.jpg"
-    header_title = "Customizable header title"
+    header_title = "Kori's Blog"
     copyright = "Powered by [Hugo](http://gohugo.io)."
     custom_css = []
     custom_js  = []
@@ -27,15 +27,4 @@ theme = "hugo-minimalist-theme"
     # Enable gogle analytics by entering your tracking code
     google_analytics = ""
 
-[social]
-    # Add your social network accounts to the profile section on the left
-    # by entering your username. The links to your account will be
-    # create automatically.
-    twitter   = "spf13"
-    facebook  = ""
-    linkedin  = ""
-    behance   = ""
-    dribbble  = ""
-    instagram = ""
-    github    = "digitalcraftsman"
-    gplus     = ""
+
